tests/compile_fail/move_out_rooted.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> tests/compile_fail/move_out_rooted.rs:38:19
   |
36 |     let v = ptr.borrow_mut(&mut owner, &arena).0.take().unwrap();
   |                            ---------- mutable borrow occurs here
37 |     // `ptr` and the container could be collected here.
38 |     arena.collect(&owner);
   |                   ^^^^^^ immutable borrow occurs here
...
41 |     assert!(v.borrow(&owner).0.is_none());
   |             - mutable borrow later used here

error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> tests/compile_fail/move_out_rooted.rs:41:22
   |
36 |     let v = ptr.borrow_mut(&mut owner, &arena).0.take().unwrap();
   |                            ---------- mutable borrow occurs here
...
41 |     assert!(v.borrow(&owner).0.is_none());
   |               ------ ^^^^^^ immutable borrow occurs here
   |               |
   |               mutable borrow later used by call
